Dejando por un momento las funciones

--- a/txt/04.componiendo.md
+++ b/txt/04.componiendo.md
@@ -7,10 +7,42 @@ letras. En matemáticas existen estructuras, como las matrices y
 vectores, que están compuestas de datos más simples, números
 reales. Los árboles son estructuras de datos que son capaces de representar
 cosas tan diversas como un árbol genealógico o la estructura de un
-edificil. 
+edificio. 
 
 Todos los lenguajes de programación, o la mayoría, son capaces de
 trabajar con estas estructuras, con una forma de escribirlas o
 sintaxis particular y unas funciones que permiten modificarlas o
-combinarlas.
+combinarlas. Empezaremos por las
+
+## funciones,
+
+que especifican qué secuencia de operaciones se debe aplicar a un
+elemento determinado. En Python, las funciones son datos como
+cualquier otro, número o cadena, y se pueden definir usando `lambda`. 
+
+```Python
+(lambda dato: dato*dato)(3+4j)
+(-7+24j)
+```
+
+Esta función va a usar `dato` para referirse a los valores que se le
+van a pasar a la función; tras los `:` especifica la operación que va
+a realizar sobre el mismo, que es a la vez el valor que va a
+devolver. En este caso, multiplicarlo por sí mismo. Los primeros
+paréntesis, que, recordemos, sirven para agrupar operaciones, definen
+esta operación sin nombre; los segundos paréntesis sirven para definir
+el valor que se le va a pasar a la función definida, por el momento
+sin nombre.
+
+A los lenguajes que tienen, aparte de la posibilidad de definir
+funciones como datos *de primera categoría*, otra serie de
+características, se les llama lenguajes funcionales. Python no es, en
+realidad, un lenguaje funcional, aunque sí permite, como se ve,
+definir variables de esta forma, que además es muy similar a como se
+hace en Ruby:
+
+## vectores, listas y otras estructuras secuenciales.
+
+Las listas almacenan grupos de datos que pueden tener alguna relación
+entre ellas. 
 
