Añadiendo sobre números complejos en Ruby

--- a/txt/03.logica.md
+++ b/txt/03.logica.md
@@ -272,9 +272,15 @@ _**2
 (8.99+0.6000000000000001j)
 ```
 En Python, la parte imaginaria se representa, por alguna razón, por
-`j` en vez del convencional `i`
+`j` en vez del convencional `i`, que es el que se usa en Ruby o en
+Perl6:
 
-A priori, es complejo pensar en algún problema "del mundo real" que
+```Ruby
+ :002 > (3+4i)*(5+0.1i)
+ => (14.6+20.3i) 
+```
+
+*A priori*, es complejo pensar en algún problema "del mundo real" que
 use los números complejos. Pero las matemáticas son también del mundo
 real, y problemas como "¿Diverge la sucesión (1+πi)ⁿ?" tendrá que
 comenzar por una fase de abstracción en la que se decidirá que la
