--- a/txt/04.componiendo.md
+++ b/txt/04.componiendo.md
@@ -70,7 +70,7 @@ user=> ((fn [zipi zape] (str zipi " " zape)) "þor" "es poderoso")
 "þor es poderoso"
 ```
 
-Todos los lenguajes funcionales, por herencia de Lips, tienen muchos
+Todos los lenguajes funcionales, por herencia de Lisp, tienen muchos
 paréntesis. Qué le vamos a hacer. La forma de trabajar también es
 peculiar. No separan la función de los datos a los que se van a
 aplicar, simplemente todo forma una *tupla* o agrupación donde el
