Me voy a dar un chapuzón
Hala, ya está bien por hoy o por lo menos por esta mañana. Esta tarde,
al cine a ver Wonder Woman y si acaso dedicarme a otras tareas. Cuando
me encuentre a alguien que me diga "Qué, como estáis sin clases, a
vaguear desde principio de junio, ¿no?" lo committeo y luego lo pusheo.

--- a/txt/04.componiendo.md
+++ b/txt/04.componiendo.md
@@ -95,8 +95,53 @@ la siguiente. Conviene conocer los lenguajes de programación
 funcionales, e intentar funcionar de forma funcional (broma totalmente
 intencionada) en el resto de los lenguajes. Incluso en Python. 
 
-## vectores, listas y otras estructuras secuenciales.
+Una función es una estructura compleja porque incluye definiciones de
+parámetros y también código. Pero
 
-Las listas almacenan grupos de datos que pueden tener alguna relación
-entre ellas. 
+## vectores, listas y otras estructuras secuenciales
 
+almacenan grupos de datos que pueden tener alguna relación
+entre ellas. Por ejemplo
+
+```Python
+["A1", 4+5j, lambda dato: dato*dato ]
+['A1', (4+5j), <function <lambda> at 0x7fb4cb278a60>]
+```
+
+La primera cadena puede ser una cadena única que sirva para
+identificar, la segunda un valor inicial, y la tercera una función que
+se va a aplicar repetidamente para obtener el resultado. Los tipos son
+diferentes, tan diferentes como se pueda ser, pero a Python le da
+igual. Los corchetes `[]` al principio y al final son los que indican
+que se trata de una lista y las comas separan cada elemento del
+siguiente. 
+
+Como todo en Python,
+las
+[listas son objetos](https://docs.python.org/2/tutorial/datastructures.html). Python
+es un lenguaje orientado a objetos, lo que viene a significar que
+cuando se define algo usando una sintaxis determinada, lleva aparejada
+una serie de operaciones que se pueden hacer con él. A esas
+operaciones se puede acceder usando un `.` y el nombre de la
+función. Por ejemplo, queremos extraer el último elemento de la lista:
+
+```Python
+["A1", 4+5j, lambda dato: dato*dato ].pop()
+<function <lambda> at 0x7fb4cb278a60>
+```
+
+devuelve `<function <lambda> at 0x7fb4cb278a60>`, la función que está,
+efectivamente, en la última posición. Podemos acceder a cualquiera de
+los elementos de la lista también usando corchetes:
+
+```Python
+["A1", 4+5j, lambda dato: dato*dato ][1]
+(4+5j)
+```
+
+o incluso a un rango de ellos:
+
+```Python
+["A1", 4+5j, lambda dato: dato*dato ][0:2]
+['A1', (4+5j)]
+```
