--- a/txt/04.componiendo.md
+++ b/txt/04.componiendo.md
@@ -145,3 +145,47 @@ o incluso a un rango de ellos:
 ["A1", 4+5j, lambda dato: dato*dato ][0:2]
 ['A1', (4+5j)]
 ```
+
+Sin embargo, para lo que lo hemos planteado, almacenar operaciones y
+valors iniciales, es posible que esta estructura no sea la más
+adecuada. Una vez que se han establecido los valores, lo normal es que
+no se alteren. Si algún valor inicial cambia, se puede crear un nuevo
+terceto. Es decir, puede ser conveniente que los valores sean
+inmutables, que no
+cambien. Las
+[*tuplas*](http://openbookproject.net/thinkcs/python/english3e/tuples.html) representan
+este tipo de dato que va a ser inalterable a lo largo de su vida. 
+
+```Python
+("A1", 4+5j, lambda dato: dato*dato )
+('A1', (4+5j), <function <lambda> at 0x7faa8da8ee18>)
+```
+
+Aparentement es igual, pero su tipo es `tuple` en vez de `list`. Se
+puede usar `[]` de la misma forma para acceder a elementos
+particulares, pero `pop` no va a funcionar; simplemente no tiene ese
+método porque una vez creada una tupla es inmutable, sólo se puede
+procesar y generar alguna otra cantidad. Esta distinción entre
+*tuplas* y *listas* es peculiar de Python, pero en casi todos los
+lenguajes existen estructuras de datos inmutables o mutables. De
+hecho, en algunos lenguajes funcionales como Clojure algunas
+estructuras de datos similares, las *colecciones*, son inmutables por
+omisión y hay que usar funciones para hacer versiones mutables. Esta
+sería una lista equivalente a la anterior (salvo por la ausencia de
+números complejos como dato base):
+
+```Clojure
+'("A1" 3 (fn [dato] (dato*dato)))
+```
+
+El `'` al principio hace que la lista no se evalúe, porque toda lista,
+siempre, se evalúa en Clojure. Y, comos e ha indicado, esa lista no se puede modificar, como
+las tuplas de Python, sólo se le puede evaluar o pasar a una función
+para que genere una nueva lista. 
+
+En los dos lenguajes y en los dos casos indicados, las listas pueden
+tener elementos homogéneos o heterogéneos. 
+
+
+
+
