--- a/txt/04.componiendo.md
+++ b/txt/04.componiendo.md
@@ -147,7 +147,7 @@ o incluso a un rango de ellos:
 ```
 
 Sin embargo, para lo que lo hemos planteado, almacenar operaciones y
-valors iniciales, es posible que esta estructura no sea la más
+valores iniciales, es posible que esta estructura no sea la más
 adecuada. Una vez que se han establecido los valores, lo normal es que
 no se alteren. Si algún valor inicial cambia, se puede crear un nuevo
 terceto. Es decir, puede ser conveniente que los valores sean
@@ -161,7 +161,7 @@ este tipo de dato que va a ser inalterable a lo largo de su vida.
 ('A1', (4+5j), <function <lambda> at 0x7faa8da8ee18>)
 ```
 
-Aparentement es igual, pero su tipo es `tuple` en vez de `list`. Se
+Aparentemente es igual, pero su tipo es `tuple` en vez de `list`. Se
 puede usar `[]` de la misma forma para acceder a elementos
 particulares, pero `pop` no va a funcionar; simplemente no tiene ese
 método porque una vez creada una tupla es inmutable, sólo se puede
@@ -179,12 +179,18 @@ números complejos como dato base):
 ```
 
 El `'` al principio hace que la lista no se evalúe, porque toda lista,
-siempre, se evalúa en Clojure. Y, comos e ha indicado, esa lista no se puede modificar, como
+siempre, se evalúa en Clojure. Y, como se ha indicado, esa lista no se puede modificar, como
 las tuplas de Python, sólo se le puede evaluar o pasar a una función
 para que genere una nueva lista. 
 
 En los dos lenguajes y en los dos casos indicados, las listas pueden
-tener elementos homogéneos o heterogéneos. 
+tener elementos homogéneos o heterogéneos. En muchos casos vamos a
+trabajar con elementos del mismo tipo, numéricos por ejemplo. Siempre
+que vayamos a
+
+## procesar listas
+
+
 
 
 
