Procesando listas y eso

--- a/txt/04.componiendo.md
+++ b/txt/04.componiendo.md
@@ -188,7 +188,24 @@ tener elementos homogéneos o heterogéneos. En muchos casos vamos a
 trabajar con elementos del mismo tipo, numéricos por ejemplo. Siempre
 que vayamos a
 
-## procesar listas
+## procesar listas,
+
+como la siguiente:
+```
+list(range(10))
+[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
+```
+
+que es una forma de indicarle a Python que queremos un rango de
+valores que termina en el valor justo anterior al que le
+pasamos, 10. Lo que ocurre es que un `range` es un objeto peculiar que
+permite hacer ciertas cosas; nosotros necesitamos convertirlo en una
+lista para poder trabajar con él fácilmente. Como generador de listas
+de números, `range` es bastante flexible,
+[pero es inmutable](http://www.mclibre.org/consultar/python/lecciones/python_range.html). Por
+eso necesitamos convertirlo en un tipo mutable para poder trabajar con
+él alterándolo *in situ*. 
+
 
 
 
