Avanzando poquito a poquito

--- a/txt/04.componiendo.md
+++ b/txt/04.componiendo.md
@@ -206,6 +206,25 @@ de números, `range` es bastante flexible,
 eso necesitamos convertirlo en un tipo mutable para poder trabajar con
 él alterándolo *in situ*. 
 
+Por ejemplo, esta expresión nos halla los números divisibles por 11
+entre los 100 primeros:
+
+```Python
+list(filter( lambda by11: by11//11 == by11/11, range(100) ))
+[0, 11, 22, 33, 44, 55, 66, 77, 88, 99]
+```
+
+y lo hace aplicando un filtro, que toma como argumentos una función,
+que como vemos está creada a partir de una `lambda`, y los 100
+primeros números con `range`. El resultado de `filter` es un objeto de
+tipo `filter`, pero ese objeto se convierte fácilmente en una lista
+simplemente usando `list()`, que efectivamente crea una lista a partir
+del objeto en el argumento, siempre que esto sea posible, claro.
+
+>*Ejercicio*: Listar todos los números que sean potencia de dos entre
+>los 1000 primeros números. ¿Se puede usar una técnica parecida para
+>las potencias de tres? 
+
 
 
 
