Habiendo descubierto los operadores bit a bit
Dan mucho juego, así que se añade una pequeña sección.

--- a/txt/03.logica.md
+++ b/txt/03.logica.md
@@ -342,8 +342,62 @@ decir, sustituyendo el 5 por el 4 o por el 7?
 > Específicamente, ¿con qué resultados hay que hacer pequeños cambios
 > para que funcione?
 
+Como parte de la descomposición mencionada anteriormente está el hecho
+de que, eventualmente, toda la información que hay en un ordenador se
+reduce a puertas lógicas que pueden tomar un valor 0 o 1, verdad o
+mentira. Por eso casi todos los lenguajes de programación tienen
+operadores que permiten trabajar con los números 
 
+## a nivel de bit.
 
+El trabajar con números en su representación binaria muchas veces es
+la forma más rápida de hacer ciertas pruebas; dado que, de hecho, el
+número ya está en esa representación, hacer ciertas operaciones
+aprovechándola es más rápido que hacerlo de otra forma. Por ejemplo,
+los números pasados a binario tienen un `1` como su último bit si son
+impares, `0` si son pares. Para comprobar si este último bit está
+*encendido*, se compara bit a bit con `1`
 
+```
+33 & 1
+1
+30 & 1
+0
+```
 
+`&` es el *y bit a bit*, o *bitwise and*, que toma cada bit de los dos
+operandos y lo compara, haciendo la operación lógica correspondiente y
+dando el resultado. De la misma forma se puede también multiplicar y
+dividir por 2 o cualquier potencia de 2, usando  los operadores que corren a la izquierda `<<` o
+derecha `>>` el número de bits que le digamos.
 
+```
+333 >> 1
+166
+888 << 1
+1776
+```
+
+Puede ser una forma rápida de hallar potencias de 2
+```
+2 << 36
+137438953472
+```
+
+Hay otros dos operadores que son equivalentes a *or* y *not*, `|` y
+`~`. Pero el siguiente operador es bastante interesante, `XOR`. Es un
+operador lógico que es 1 cuando uno de los dos operandos es 1, pero no
+cuando lo son los dos, se denomina *o exclusivo* o *exclusive or*, de
+ahí `xor`. Y uno de sus usos es para hacer *flipping*, o cambiar el
+valor de un bit a su contrario. Una forma rápida de cambiar el bit *n*
+de un número puede ser la siguiente:
+
+```
+32 ^ (1 << 3)
+40
+```
+
+`1 << 3` correspondería al número binario `100`, es decir, 1 corrido
+tres posiciones. 32 es el número binario `10000`. `32 ^ 8` es `10000 ^
+100, es decir, cambiaría el 3º bit (empezando por izquierda o derecha,
+da igual), que convertiría el número en el 40 que vemos. 
