Introduciendo siguiente apartado

--- a/txt/03.logica.md
+++ b/txt/03.logica.md
@@ -401,3 +401,13 @@ de un número puede ser la siguiente:
 tres posiciones. 32 es el número binario `10000`. `32 ^ 8` es `10000 ^
 100, es decir, cambiaría el 3º bit (empezando por izquierda o derecha,
 da igual), que convertiría el número en el 40 que vemos. 
+
+> *Ejercicio* Usando `xor`, comprobar si dos números enteros tienen el
+> mismo signo. 
+
+
+Es muy probable que en el ejercicio anterior hayas tenido buscar en
+Internet. Si lo has hecho, te habrás dado cuenta de que
+
+## Todo está en StackOverflow
+
