Añade cosas en Lua, para variar

--- a/txt/03.logica.md
+++ b/txt/03.logica.md
@@ -402,6 +402,24 @@ tres posiciones. 32 es el número binario `10000`. `32 ^ 8` es `10000 ^
 100, es decir, cambiaría el 3º bit (empezando por izquierda o derecha,
 da igual), que convertiría el número en el 40 que vemos. 
 
+En otros lenguajes, como [Lua](http://lua.org), se usan exactamente
+los mismos símbolos para el mismo tipo de operadores. Estos
+operadores, al no ser *naturales* como la suma o la resta, se prestan
+a la creatividad por parte de los diseñadores de los lenguajes. Por
+ejemplo, en Lua hallaríamos la media de 8 y 15 de esta forma:
+
+```Lua
+> (8+32) >> 1
+20
+```
+
+que, casualmente es exactamente la misma forma en la que lo haríamos
+en Python. El truco aquí es simplemente darse cuenta de que `>> 1` es
+como una división entera por dos. En realidad no funciona si alguno de
+los números es impar, pero si se trabaja sólo con enteros sería una
+forma muy rápida, ya que se hace directamente en el procesador usando
+instrucciones del mismo, de realizar esta operación. 
+
 > *Ejercicio* Usando `xor`, comprobar si dos números enteros tienen el
 > mismo signo. 
 
