Añade lo de StackOverflow

--- a/txt/03.logica.md
+++ b/txt/03.logica.md
@@ -427,5 +427,63 @@ instrucciones del mismo, de realizar esta operación.
 Es muy probable que en el ejercicio anterior hayas tenido buscar en
 Internet. Si lo has hecho, te habrás dado cuenta de que
 
-## Todo está en StackOverflow
+## Todo está en StackOverflow.
+ 
+Para qué vamos a engañarnos, seguro que siguiendo este tutorial o,
+para el caso, cualquier otro, habéis consultado una o más veces Google
+buscando cómo hacer algo. Un dominio ligero del inglés y una conexión
+a Internet es lo que hace falta para aprender prácticamente cualquier
+cosa, desde lenguajes a macramé. A un nivel en el que se esté
+comenzando en un lenguaje, todas tus preguntas tendrán cumplida
+respuesta, incluso si provienes de otro lenguaje de programación
+preguntando *equivalences of whatever thislenguage
+thisotherlanguage*. En muchos casos habrá también vídeos o cursos
+enteros, en ocasiones gratuitos, para aprender lo que uno desee.
 
+Muchas de las respuestas van a estar
+en [StackOverflow](http://stackoverflow.com), que se inición como un
+sitio de preguntas y respuestas pero que eventualmente ha evolucionado
+en una serie de sitios de diferentes temas, desde la historia hasta la
+estadística pasando por LaTeX o, por supuesto, programación. 
+
+StackOverflow tiene un sistema de puntuaciones por parte de los
+usuarios que pone como mejor respuesta la mejor puntuada; eso te
+garantiza, más o menos, que vas a tener una buena respuesta, ya que
+además se pueden editar con el tiempo si quedan obsoletas por lo que
+sea. El único peligro puede ser que la respuesta esté obsoleta, pero
+de forma más o menos consistente sueles obtener una buena respuesta. A
+veces está en los foros de [Reddit](http://reddit.com); Reddit tiene
+una serie de foros llamados *subreddits* donde se pueden postear
+preguntas y un sistema más o menos similar de puntuación.
+
+Lo bueno que tienen estos sitios es precisamente esa interacción:
+puedes interaccionar con ellos, si te das de alta puedes y de hecho
+debes, votar a las preguntas que te ayuden, aparte de a las
+respuestas. También editarlas, y por supuesto si en alguna puedes
+ayudar, aportar soluciones. Eventualmente, puedes también preguntar si
+tienes alguna duda, no sin antes hacer lo siguiente
+
+1. Buscar exhaustivamente por todo Google y el propio StackOverflow
+   respuesta a esa pregunta y algunas más generales.
+   
+2. Reducir al mínimo el error o el problema que tengas. No puedes
+   subir 200 líneas de código y esperar que alguien se las lea. Si el
+   error está en 2 líneas, pues mucho mejor.
+   
+3. Poner de forma precisa cuál es el error: mensaje de error completo
+   o de forma precisa qué es lo que quieres hacer y no puedes. Durante
+   este proceso el propio StackOverflow te sugerirá otras
+   posibilidades. Léelas con cuidado, porque es posible que esté la
+   respuesta. 
+   
+4. Una vez hecha la pregunta, difúndela por las redes sociales. Se
+   hacen miles de preguntas en StackOverflow. Una puede pasar sin
+   pena, gloria ni solución. La difusión ayuda. 
+
+Una vez que empieces a hacerlo, te convertirás en un verdadero experto
+y comprenderás el chiste que circula diciendo que los cursos de
+programación se van a
+renombrar
+[Cortar y pegar de StackOverflow](https://www.gitbook.com/book/tra38/essential-copying-and-pasting-from-stack-overflow/details). Lo
+cierto es que ayuda mucho desde el proceso de aprendizaje... Hasta el
+proceso de aprendizaje, que en programación nunca acaba. 
