--- a/txt/03.logica.md
+++ b/txt/03.logica.md
@@ -441,7 +441,7 @@ thisotherlanguage*. En muchos casos habrá también vídeos o cursos
 enteros, en ocasiones gratuitos, para aprender lo que uno desee.
 
 Muchas de las respuestas van a estar
-en [StackOverflow](http://stackoverflow.com), que se inición como un
+en [StackOverflow](http://stackoverflow.com), que se inició como un
 sitio de preguntas y respuestas pero que eventualmente ha evolucionado
 en una serie de sitios de diferentes temas, desde la historia hasta la
 estadística pasando por LaTeX o, por supuesto, programación. 
