Terminando pre-fisio

--- a/txt/04.componiendo.md
+++ b/txt/04.componiendo.md
@@ -225,6 +225,36 @@ del objeto en el argumento, siempre que esto sea posible, claro.
 >los 1000 primeros números. ¿Se puede usar una técnica parecida para
 >las potencias de tres? 
 
+Como generación de sucesiones una vez que uno tiene manera de decidir
+si algo pertenece o no a la sucesión está bien, pero muchas veces lo
+que buscamos es hacer algo con todos los elementos de una lista, para
+obtener como resultado otra lista diferente. Este tipo de funciones se
+llaman *maps*, que en realidad es el término inglés para *aplicación*
+en el sentido matemático: una función que se aplica a una lista para
+obtener otra lista diferente. Por ejemplo, vamos a representar los
+números en una lista usando círculos, para hacer gráficas de
+caracteres, por ejemplo.
+
+```Python
+list(map( lambda num: num*"●", [3,15,2,7,33]))
+['●●●', '●●●●●●●●●●●●●●●', '●●', '●●●●●●●',
+'●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●']
+```
+
+Como en el caso anterior, `map` crea un objeto de ese tipo, que
+tenemos que convertir en lista usando list para que aparezca el
+resultado de una forma legible. En este caso, para generar una cadena
+con tantos círculos como el valor numérico que haya usamos la
+multiplicación, `*` como repetición de cadenas. En este caso el
+resultado es una cadena que repite la inicial tantas veces como
+indique el número. A este reuso de símbolos siguiendo más o menos su
+significado *natural* se le denomina **sobrecarga** de operadores. Un
+operador está *sobrecargado* cuando se puede aplicar a diferentes
+tipos con resultado que, siendo coherentes, son diferentes. `*` se
+puede aplicar a números enteros dando un resultado entero, a reales y
+enteros dando un resultado real, y a enteros y cadenas dando como
+resultado una cadena. Esto no quiere decir que `*` funcione siempre;
+si se trata de multiplicar por un número real, producirá un error. 
 
 
 
