Más trabajos con las variables...

--- a/txt/04.componiendo.md
+++ b/txt/04.componiendo.md
@@ -256,6 +256,24 @@ enteros dando un resultado real, y a enteros y cadenas dando como
 resultado una cadena. Esto no quiere decir que `*` funcione siempre;
 si se trata de multiplicar por un número real, producirá un error. 
 
+![Error con multiplicación con reales](../img/error-float-string.png)
+
+También se pueden usar funciones ya definidas por Python. Por ejemplo,
+`len` devuelve la longitud de un objeto:
+
+```Python
+list(map(len,['●●●', '●●●●●●●●●●●●●●●', '●●', '●●●●●●●', '●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●'])
+[3, 15, 2, 7, 33]
+```
+
+Que devolverá, de una forma retorcida, los número que había en la
+lista original, tras medir el número de círculos en la cadena que es,
+efectivamente, el mismo. Obsérvese que el primer argumento de map es
+siempre una función. No le estamos pasando más que el nombre de la
+función. Map llamará a esa función una vez por cada elemento de la
+lista. 
+
+
 
 
 
