Terminando la subsección de composición de cosas

--- a/txt/04.componiendo.md
+++ b/txt/04.componiendo.md
@@ -273,8 +273,25 @@ siempre una función. No le estamos pasando más que el nombre de la
 función. Map llamará a esa función una vez por cada elemento de la
 lista. 
 
+`len` es una de las
+pocas
+[funciones de Python que están siempre disponibles](https://docs.python.org/3/library/functions.html). Una
+de las frases del Zen de Python dice
+que
+[los espacios de nombres son una gran idea](https://www.python.org/dev/peps/pep-0020/) y
+que habría que usar un montón de esos. Efectivamente, eso viene a
+decir que es mejor meter funciones que no sean relativamente comunes
+en espacios de nombres o módulos específicos, y dejar el espacio de
+nombre "nulo", o el de funciones siempre disponibles, que no necesitan
+prefijo, limpio con unas 70 funciones, muchas de las cuales son para
+construir objetos y hemos visto ya, como `list`, `map` o `filter`.  
 
+Los espacios de nombres, precisamente, preceden a los
+identificadores. Ya hemos visto algunos de estos, los que se usan para
+designar a las funciones. Pero ya va siendo hora de que conozcamos a
+nuestras amigas
 
+## las variables.
 
 
 
