Añade un ejercicio

--- a/txt/04.componiendo.md
+++ b/txt/04.componiendo.md
@@ -291,6 +291,9 @@ identificadores. Ya hemos visto algunos de estos, los que se usan para
 designar a las funciones. Pero ya va siendo hora de que conozcamos a
 nuestras amigas
 
+> *Ejercicio*: "Representar" de forma gráfica (usando caracteres) el
+> logaritmo de las 20 primeras potencias de dos. 
+
 ## las variables.
 
 
