Antes de comenzar las variables2

--- a/txt/04.componiendo.md
+++ b/txt/04.componiendo.md
@@ -286,13 +286,32 @@ nombre "nulo", o el de funciones siempre disponibles, que no necesitan
 prefijo, limpio con unas 70 funciones, muchas de las cuales son para
 construir objetos y hemos visto ya, como `list`, `map` o `filter`.  
 
+
+> *Ejercicio*: "Representar" de forma gráfica (usando caracteres) el
+> logaritmo de las 20 primeras potencias de dos. 
+
+[Haskell](http://haskell.org), que es un lenguaje funcional,
+permite aplicar también estos `maps` con una sintaxis relativamente
+directa
+
+```Haskell
+map (\rep -> concat $ replicate rep "#") [3,2,1]
+["###","##","#"]
+```
+
+La definición de funciones en este caso se hace con un paréntesis. El
+`\` inicial declara el representante de las funciones de la lista que
+se le va a pasar. Además, en Haskell los argumentos de la función van
+simplemente separados por espacios, así que `replicate rep "\#"`
+replica `rep` veces el asteriosco, `concat $` lo reúne en una sola
+cadena, y por tanto, también de una forma un tanto complicada, crea
+"barras" con almohadillas "#" de la longitud de los diferentes
+elementos de la lista que se le pasa. 
+
 Los espacios de nombres, precisamente, preceden a los
 identificadores. Ya hemos visto algunos de estos, los que se usan para
 designar a las funciones. Pero ya va siendo hora de que conozcamos a
 nuestras amigas
-
-> *Ejercicio*: "Representar" de forma gráfica (usando caracteres) el
-> logaritmo de las 20 primeras potencias de dos. 
 
 ## las variables.
 
