--- a/txt/04.componiendo.md
+++ b/txt/04.componiendo.md
@@ -303,7 +303,7 @@ La definición de funciones en este caso se hace con un paréntesis. El
 `\` inicial declara el representante de las funciones de la lista que
 se le va a pasar. Además, en Haskell los argumentos de la función van
 simplemente separados por espacios, así que `replicate rep "\#"`
-replica `rep` veces el asteriosco, `concat $` lo reúne en una sola
+replica `rep` veces el asterisco, `concat $` lo reúne en una sola
 cadena, y por tanto, también de una forma un tanto complicada, crea
 "barras" con almohadillas "#" de la longitud de los diferentes
 elementos de la lista que se le pasa. 
