Un poco de nombres de variables

--- a/txt/04.componiendo.md
+++ b/txt/04.componiendo.md
@@ -315,6 +315,20 @@ nuestras amigas
 
 ## las variables.
 
+Las variables almacenan objetos que vamos a usar más adelante;
+permiten hacer expresiones más claras y concisas y no tener que
+recalcular continuamente valores. Ya hemos visto una, `_`, que
+almacena el último valor calculado en el intérprete. También otras
+variables como las que se usan en expresiones `lambda`, que más que
+para almacenar sirven para representar valores que se le pasan a una
+expresión, aunque tienen la misma forma sean para representar o para
+almacenar. 
 
+El asunto de darle nombre a un objeto o
+expresión
+[no es baladí](https://www.python.org/dev/peps/pep-0008/#naming-conventions). Aunque
+se pueden usar mayúsculas o minúsculas combinadas con `_`, se aconseja
+no usar ni `l` ni `O` ni `I` porque seguro que habéis tenido que estar
+un momento pensando si se trata de un 0 o de un 1. 
 
 
