Revisando lo de las instalaciones

--- a/txt/01.empezar.md
+++ b/txt/01.empezar.md
@@ -70,6 +70,7 @@ como hemos visto antes, control-r.
 Instálatela de la forma habitual
 
 	sudo apt install python3 #Ubuntu
+	apk add python #Alpine Linux
 	brew  install python3 #OSX
 	choco install python &REM Windows
 
@@ -79,7 +80,7 @@ o
 
 Si usas
 el [Package Manager](https://www.nuget.org/packages/python/3.6.0) de
-NuGet.
+NuGet para Windows.
 
 ## Usando `pyenv`
 
