Incorpora `virtualenv` por @josecolella
Con mis agradecimientos en el README.md

--- a/txt/01.empezar.md
+++ b/txt/01.empezar.md
@@ -102,19 +102,19 @@ más adelante.
 ## Usando virtualenv
 
 Si quieres trabajar en un entorno en el cual los paquetes que instales estan
-aislados de los paquetes que estan instalados por defecto, se puede utilizar
+aislados de los que estan instalados por defecto, se puede utilizar
 lo que es conocido como `virtualenv`. Con `virtualenv` se puede tener entornos
-donde uno puede instalar modulos que solo esta ligados a dicho entorno y no
-afectan al sistema.
+con módulos que solo están ligados a dicho entorno y no
+afectan al resto del sistema; la principal diferencia con `pyenv` es que en este los módulos se instalan para todos los programas del usuario. En producción será bastante más útil `virtualenv` y conviene conocerlo, pero para el resto de este tutorial es suficiente con las formas de instalación indicadas anteriormente. 
 
-Para instalar se utiliza el gestor de modulos en python conocido como `pip`
+Para instalar se utiliza el gestor de módulos en python conocido como `pip`:
 
 ```sh
 $ [sudo] pip install virtualenv
 ```
 
-Con esto podemos tener entornos aislados resolviendo problemas de dependencies, versiones,
-y permisos. Mas información sobre virtualenv se puede encontrar [aquí](https://virtualenv.pypa.io/en/stable/)
+Con esto podemos tener entornos aislados, resolviendo problemas de dependencies, versiones,
+y permisos. Más información sobre virtualenv [en su web](https://virtualenv.pypa.io/en/stable/). 
 
 
 ## Trabajando con un editor
