--- a/txt/01.empezar.md
+++ b/txt/01.empezar.md
@@ -101,8 +101,8 @@ más adelante.
 
 ## Usando virtualenv
 
-Si quieres trabajar en un entorno en el cual los paquetes que instales estan
-aislados de los que estan instalados por defecto, se puede utilizar
+Si quieres trabajar en un entorno en el cual los paquetes que instales están
+aislados de los que están instalados por defecto, se puede utilizar
 lo que es conocido como `virtualenv`. Con `virtualenv` se puede tener entornos
 con módulos que solo están ligados a dicho entorno y no
 afectan al resto del sistema; la principal diferencia con `pyenv` es que en este los módulos se instalan para todos los programas del usuario. En producción será bastante más útil `virtualenv` y conviene conocerlo, pero para el resto de este tutorial es suficiente con las formas de instalación indicadas anteriormente. 
@@ -113,7 +113,7 @@ Para instalar se utiliza el gestor de módulos en python conocido como `pip`:
 $ [sudo] pip install virtualenv
 ```
 
-Con esto podemos tener entornos aislados, resolviendo problemas de dependencies, versiones,
+Con esto podemos tener entornos aislados, resolviendo problemas de dependencias, versiones,
 y permisos. Más información sobre virtualenv [en su web](https://virtualenv.pypa.io/en/stable/). 
 
 
