--- a/txt/01.empezar.md
+++ b/txt/01.empezar.md
@@ -118,7 +118,7 @@ y permisos. Más información sobre virtualenv [en su web](https://virtualenv.py
 
 ## Trabajando desde cualquier lugar
 
-Si simplemente quieres ir probando cosas desde tu tablet o un ordenador accesible publicamente, puedes usar [repl.it](https://repl.it/languages/python3), un recurso en la web con REPLs (bucle lee, evalúa, imprime) para un montón de lenguajes, incluyendo Python 2 y 3 y muchos otros lenguajes de los que vamos a usar ejemplos en este tutorial. 
+Si simplemente quieres ir probando cosas desde tu tablet o un ordenador accesible públicamente, puedes usar [repl.it](https://repl.it/languages/python3), un recurso en la web con REPLs (bucle lee, evalúa, imprime) para un montón de lenguajes, incluyendo Python 2 y 3 y muchos otros lenguajes de los que vamos a usar ejemplos en este tutorial. 
 
 > *Ejercicio*: regístrate en `repl.it` usando tu cuenta de Google, Facebook o GitHub. Si no estás registrado en GitHub, quizás sea un buen momento para hacerlo. 
 
