--- a/txt/04.componiendo.md
+++ b/txt/04.componiendo.md
@@ -329,6 +329,75 @@ expresión
 [no es baladí](https://www.python.org/dev/peps/pep-0008/#naming-conventions). Aunque
 se pueden usar mayúsculas o minúsculas combinadas con `_`, se aconseja
 no usar ni `l` ni `O` ni `I` porque seguro que habéis tenido que estar
-un momento pensando si se trata de un 0 o de un 1. 
+un momento pensando si se trata de un 0 o de un 1. El `_` es una forma
+conveniente de separar palabras en una variable, sustituyendo al
+espacio, de forma que se preferirá `es_primo` a `esPrimo`. Esta última
+convenció se suele denominar *CamelCase* y conviene evitarla [por
+diversas razones](https://whathecode.wordpress.com/2011/02/10/camelcase-vs-underscores-scientific-showdown/). 
 
+Las variables deben ser también descriptivas, como la siguiente:
 
+```Python
+cifras_de = lambda numero: len(str(numero))
+potencias_de_2 = map( lambda num: 2**num, range(20))
+list(map( cifras_de, potencias_de_2 ))
+```
+
+Estas definiciones, aparte de
+cumplir
+[el hecho de que la legibilidad cuenta](https://www.python.org/dev/peps/pep-0020/),
+también usa un `map` sin convertirlo en lista previamente;
+efectivamente, `map` se puede aplicar
+a
+[secuencias de diferente tipo](http://www.bogotobogo.com/python/python_fncs_map_filter_reduce.php). Finalmente
+convertimos el resultado a `list` por legibilidad. En este caso lo que
+estamos haciendo es hallar las cifras de una serie compuesta por las
+20 primeras potencias de dos. Para hallar las cifras de un número lo
+convertimos a una cadena con `str` y a continuación hallamos la
+longitud de esa cadena con `len`. 
+
+Trabajando con el REPL, las variables definidas se quedan en el mismo
+hasta que salgamos y podemos usarlas en cálculos más adelante. Y,
+evidentemente, igual que las constantes que hemos venido usando, y
+como se ha visto al principio, tienen un tipo que se les asigna
+automáticamente. 
+
+```Python
+type(potencias_de_2)
+<class 'map'>
+```
+
+Sin embargo, Python es un lenguaje de tipado dinámico:
+```Python
+potencias_de_2=(2,4,8,16,32)
+type(potencias_de_2)
+<class 'tuple'>
+```
+En el momento que se le vuelva a asignar un valor a la variable, el
+tipo cambia. En este caso se tratará de una *tupla*, que es también
+una secuencia y por tanto se le puede aplicar la función `map`
+anterior, pero en este caso una tupla es *inmutable*. 
+
+```Python
+potencias_de_2.insert(64)
+Traceback (most recent call last):
+  File "<stdin>", line 1, in <module>
+AttributeError: 'tuple' object has no attribute 'insert'
+```
+
+Sin embargo, se puede hacer:
+```Python
+potencias_de_2 = list( potencias_de_2)
+potencias_de_2.insert(len(potencias_de_2),64)
+```
+cambiando el tipo y reasignándoselo a la misma variable, y finalmente,
+para recuperar el valor de una variable, simplemente se escribe su
+nombre en el REPL:
+
+```Python
+potencias_de_2
+[2, 4, 8, 16, 32, 64]
+```
+
+donde se puede ver que, al tratarse de una lista y no una tupla, usa
+los corchetes y no los paréntesis. 
