Añade ejercicio... al fin

--- a/txt/04.componiendo.md
+++ b/txt/04.componiendo.md
@@ -401,3 +401,10 @@ potencias_de_2
 
 donde se puede ver que, al tratarse de una lista y no una tupla, usa
 los corchetes y no los paréntesis. 
+
+> *Ejercicio*: Calcular los múltiplos de 3 entre los 100 primeros
+> números naturales. ¿Qué tipo de estructura de datos podemos usar?
+> ¿Cómo se averigua, con un test simple, si es un múltiplo de tres?
+> ¿Se puede modificar la secuencia de operaciones anterior para
+> detectar múltiplos de 9?
+
