--- a/txt/04.componiendo.md
+++ b/txt/04.componiendo.md
@@ -332,8 +332,7 @@ no usar ni `l` ni `O` ni `I` porque seguro que habéis tenido que estar
 un momento pensando si se trata de un 0 o de un 1. El `_` es una forma
 conveniente de separar palabras en una variable, sustituyendo al
 espacio, de forma que se preferirá `es_primo` a `esPrimo`. Esta última
-convenció se suele denominar *CamelCase* y conviene evitarla [por
-diversas razones](https://whathecode.wordpress.com/2011/02/10/camelcase-vs-underscores-scientific-showdown/). 
+convenció se suele denominar *CamelCase* y conviene evitarla [por diversas razones](https://whathecode.wordpress.com/2011/02/10/camelcase-vs-underscores-scientific-showdown/). 
 
 Las variables deben ser también descriptivas, como la siguiente:
 
@@ -407,4 +406,12 @@ los corchetes y no los paréntesis.
 > ¿Cómo se averigua, con un test simple, si es un múltiplo de tres?
 > ¿Se puede modificar la secuencia de operaciones anterior para
 > detectar múltiplos de 9?
+
+Seguramente se te habrán ocurrido varias formas de hacer lo
+anterior. Una más directa, parecida a como se ha hecho antes, alguna
+menos directa. A calcular cuanto tiempo se tarda en realizar una
+operación se le llama hacer *benchmarking* y todos los lenguajes de
+programación vienen preparados para ello. Veremos como
+
+## medir la velocidad en Python.
 
