Añadiendo un poco de línea de órdenes

--- a/txt/04.componiendo.md
+++ b/txt/04.componiendo.md
@@ -415,3 +415,25 @@ programación vienen preparados para ello. Veremos como
 
 ## medir la velocidad en Python.
 
+Pero primero vamos a ver cómo trabajar con Python desde la línea de
+órdenes. Cuando trabajamos en el REPL, se trata de un bucle en el que
+la `P` significa "imprimir", por lo que no nos tenemos que preocupar
+de eso; sin embargo, cuando tratamos de ejecutarlo desde la línea de
+órdenes del sistema, símbolo del sistema o como lo llames de forma
+habitual, siempre tendrá que estar envuelto en una orden `print`: 
+
+```bash
+python -c "print(list(map(lambda n: n/2 == n//2, range(1000))))"
+```
+
+Eso va a lanzar a la pantalla una buena cantidad de `True`s y `False`s
+así que es mejor que los separemos con retornos de carro, es decir, un
+carácter que ponga cada resultado en una línea
+
+```
+python -c "print('\n'.join(map(lambda n: str( n/2 == n//2 ), range(1000))))"
+```
+
+donde usamos `join`, un método de `str` al que se le pasa una
+secuencia de cadenas; por eso hemos modificado ligeramente el `lambda`
+para que el resultado de la prueba se pase a una cadena con `str`. 
